infrastructure/apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apache
    version: "1.0"
  name: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  strategy: {}
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: microservice-istio-apache:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apache
  name: apache
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  selector:
    app: apache
  type: NodePort
