infrastructure/istio-components.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apache
spec:
  hosts:
  - "hello.istio.local"
  gateways:
  - istio-system/microservice-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: apache.infrastructure.svc.cluster.local
